<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvContacto"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    app:cardCornerRadius="@dimen/corner_radius_cardview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right">

        <ImageView
            android:id="@+id/ivFoto"
            android:layout_width="@dimen/img_width"
            android:layout_height="wrap_content"
            android:src="@drawable/rave_9"
            android:layout_gravity="center_horizontal"
            android:background="@null"
           />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pnombre"
            android:textSize="@dimen/nombre_cardview"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ptelefono"
            android:textSize="@dimen/descripcion_cardview"
            android:layout_below="@+id/tvNombre"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pemail"
            android:textSize="@dimen/descripcion_cardview"
            android:layout_below="@+id/tvTelefono"
            />
    </LinearLayout>


</androidx.cardview.widget.CardView>

